# mt-quality-api

./: .env.deploy.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: test.yml
scripts/: deploy.sh
src/gemba_score/: __init__.py  api.py  config.py  db.py  dependencies.py  main.py  models.py  prompts.py  schemas.py  ui.py
src/gemba_score/services/: llm.py  scoring.py
templates/: index.html
tests/: conftest.py  test_score_endpoint.py
