[project]
name = "gemba-score"
version = "0.1.0"
description = "Translation Quality Scoring API"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Project GEMBA-Score" }
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "sqlalchemy>=2.0.34",
  "aiosqlite>=0.20.0",
  "aioodbc>=0.4.1",
  "pyodbc>=5.1.0",
  "jinja2>=3.1.4",
  "instructor>=1.3.2",
  "pydantic-settings>=2.4.0",
  "openai>=1.51.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.23.8",
  "pytest-cov>=5.0.0",
  "ruff>=0.7.0"
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
  "ignore::DeprecationWarning"
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "SIM",
]
ignore = ["SIM112", "B008"]
